...
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/cauliflower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["cauliflower"].name}'
                    android:onClick='@{() -> viewModel.setEntree("cauliflower")}'
                    tools:text="Entree 1" />
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cauliflower_description" />

                <!-- set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/chili"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["chili"].name}'
                    android:onClick='@{() -> viewModel.setEntree("chili")}'
                    tools:text="Entree 2" />
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chili_description" />

                <!-- set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/pasta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["pasta"].name}'
                    android:onClick='@{() -> viewModel.setEntree("pasta")}'
                    tools:text="Entree 3" />
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pasta_description" />

                <!-- set the entree in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/skillet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["skillet"].name}'
                    android:onClick='@{() -> viewModel.setEntree("skillet")}'
                    tools:text="Entree 4" />
...
