...
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["bread"].name}'
                    android:onClick='@{() -> viewModel.setAccompaniment("bread")}'
                    tools:text="Accompaniment 1" />
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bread_description" />

                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/berries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["berries"].name}'
                    android:onClick='@{() -> viewModel.setAccompaniment("berries")}'
                    tools:text="Accompaniment 2" />
...
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soup_description" />

                <!-- set the RadioButton text to the accompaniment name using the view model -->
                <!-- set the accompaniment in the view model when the RadioButton is clicked -->
                <RadioButton
                    android:id="@+id/pickles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:text='@{viewModel.menuItems["pickles"].name}'
                    android:onClick='@{() -> viewModel.setAccompaniment("pickles")}'
                    tools:text="Accompaniment 3" />
...
